codex/codex-rs/tui/src/snapshots/codex_tui__quietline__tests__quietline_main_with_running_child.snap
---
source: tui/src/quietline_tests.rs
expression: text(&buffer)
---
  task_3 · closed
  task_4 · closed
  task_5 · closed
  task_6 · working
  4–7 / 7 agents · Alt+↑/↓ · /subagents
