codex/codex-rs/tui/src/snapshots/codex_tui__quietline__tests__quietline_welcome_80x24.snap
---
source: tui/src/quietline_tests.rs
expression: text(&buffer)
---








                                     ╭─────╮
                                     │  q  │
                                     ╰──╮  │
                                        ╰──╯
                                    quietline

                         Your Codex. Everything in view.
                           / commands · Alt+↑/↓ agents
